# vocal-biomarkers-ml

./: .gitignore  LICENSE  README.md  pyproject.toml
src/voice_analysis/: __main__.py  pipeline.py
src/voice_analysis/config/: __init__.py  schemas.py  settings.py
src/voice_analysis/data/: __init__.py  loader.py  preprocessor.py  validators.py
src/voice_analysis/features/: __init__.py  acoustic.py  biomechanical.py  selection.py
src/voice_analysis/metrics/: __init__.py  custom_metrics.py
src/voice_analysis/models/: __init__.py  classifiers.py  evaluation.py  hyperparameter_search.py
src/voice_analysis/preprocessing/: __init__.py  cleaning.py  resampling.py  standardization.py
src/voice_analysis/utils/: __init__.py  io.py  logging.py  reproducibility.py
src/voice_analysis/visualization/: __init__.py  distribution_plots.py  pca_plots.py  roc_curves.py
tests/: conftest.py  test___main__.py  test_pipeline.py
tests/config/: test_schemas.py  test_settings.py
tests/data/: test_loader.py  test_preprocessor.py  test_validators.py
tests/features/: test_acoustic.py  test_biomechanical.py  test_selection.py
tests/metrics/: test_custom_metrics.py
tests/models/: test_classifiers.py  test_evaluation.py  test_hyperparameter_search.py
tests/preprocessing/: test_cleaning.py  test_resampling.py  test_standardization.py
tests/utils/: test_io.py  test_logging.py  test_reproducibility.py
tests/visualization/: test_distribution_plots.py  test_pca_plots.py  test_roc_curves.py
